# python-hello

./: .gitignore  LICENSE  README.md  docrequirements.txt  pyproject.toml
docs/: conf.py  sphinx.rst
docs/source/: index.rst  sphinx.rst
src/hello_tdietel/: hello.py
